<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_color_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/str_my_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/text_25" />

            <ImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:src="@drawable/profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/str_upload_pic"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:singleLine="true"
                android:padding="@dimen/padding_10"
                android:hint="@string/str_first_name" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="@dimen/padding_10"
                android:hint="@string/hint_last_name" />

            <EditText
                android:id="@+id/et_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="@dimen/padding_10"
                android:hint="@string/str_email_id" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="@dimen/padding_10"
                android:hint="@string/str_enter_mobile_number" />

            <EditText
                android:id="@+id/et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="@dimen/padding_10"
                android:hint="@string/enter_country" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/str_about_your_self"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_about_your_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2" />

            <EditText
                android:id="@+id/et_aadhar_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/aadhar_number" />

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_30"
                android:textColor="@color/white"
                android:background="@drawable/button_round_primary"
                android:text="@string/str_update_profile" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
