<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/text_20"
        android:textColor="@color/colorPrimary"
        android:text="@string/str_add_photo"
        />

    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/margin_10"
        android:textColor="@color/black"
        android:text="@string/take_photo"
        />

    <TextView
        android:id="@+id/tv_choose_from_gallary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/text_18"
        android:textColor="@color/black"
        android:text="@string/str_choose_gallary"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/text_18"
        android:textColor="@color/black"
        android:text="@string/str_cancel"
        />

</LinearLayout>