<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include layout="@layout/toolbar_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_left_margin"
            android:layout_marginRight="@dimen/activity_right_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/str_home_made_bazar"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/text_25" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:hint="@string/str_first_name"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/hint_last_name"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_email_id"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/hint_create_password"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_confirm_password"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_apartment_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_apartment_no"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_street_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_street_no"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_area"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_city"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_state"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <EditText
                android:id="@+id/et_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/str_pin_code"
                android:inputType="number"
                android:lines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/str_choose_role" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_home_chef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_chef_selected" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/text_5"
                        android:text="@string/str_home_chef"
                        android:textColor="@color/heading_color"
                        android:textSize="@dimen/text_12" />

                    <TextView
                        android:id="@+id/tv_home_chef_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/str_home_chef_desc"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_foodie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/foodie_unselected" />


                    <TextView
                        android:id="@+id/tv_title_foodie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/text_5"
                        android:text="@string/str_foodie"
                        android:textColor="@color/heading_color"
                        android:textSize="@dimen/text_12" />

                    <TextView
                        android:id="@+id/tv_foodie_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/str_foodie_desc"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_10" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_market_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/market_place_unselected" />

                    <TextView
                        android:id="@+id/tv_title_marketplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/text_5"
                        android:text="@string/str_marketplace"
                        android:textColor="@color/heading_color"
                        android:textSize="@dimen/text_12" />

                    <TextView
                        android:id="@+id/tv_marketplace_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/str_marketplace_desc"
                        android:textColor="@color/sub_heading_color"
                        android:textSize="@dimen/text_10" />

                </LinearLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_30"
                android:background="@drawable/background_button"
                android:text="@string/str_continue"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>