<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include layout="@layout/toolbar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_right_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_enter_password"
            android:textSize="@dimen/text_20"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_15"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/hint_password"
            />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/str_continue"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            />

    </LinearLayout>


</RelativeLayout>
